--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ notifications:
 env:
   global:
     - R_BUILD_ARGS="--no-build-vignettes --no-manual"
-    - R_CHECK_ARGS="--no-manual --as-cran"
+    - R_CHECK_ARGS="--no-build-vignettes --no-manual --as-cran"
 # See the travis docs for more information:
 #   http://about.travis-ci.org/docs/user/build-configuration/#The-Build-Matrix
 
