--- a/.travis.yml
+++ b/.travis.yml
@@ -1,41 +1,38 @@
 # Sample .travis.yml for R projects.
 #
-# See https://github.com/craigcitro/r-travis
-#
-# Running with default settings which for now means 'no manual, no vignettes'
-# and checking '--as-cran'.
+# See README.md for instructions, or for more configuration options,
+# see the wiki:
+#   https://github.com/craigcitro/r-travis/wiki
 
 language: c
-script: ./travis-tool.sh run_tests
-before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-install:
-  - ./travis-tool.sh r_install RUnit inline rbenchmark highlight
-after_script:
-  - ./travis-tool.sh dump_logs
-notifications:
-  email:
-    on_success: change
-    on_failure: change
 
-# Options used for building or testing your R package can be
-# controlled by uncommenting one or both of the following; the values
-# here are the defaults:
 env:
   global:
     - R_BUILD_ARGS="--no-build-vignettes --no-manual"
     - R_CHECK_ARGS="--no-build-vignettes --no-manual --as-cran"
     - RunAllRcppTests="yes"
+    - CC="gcc-4.7"
+    - CXX="g++-4.7"
+
+before_install:
+  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+  - chmod 755 ./travis-tool.sh
+  - ./travis-tool.sh bootstrap
+  - ./travis-tool.sh install_aptget gcc-4.7 g++-4.7
+
+install:
+  - ./travis-tool.sh install_r RUnit inline rbenchmark highlight
+
+script: 
+  - ./travis-tool.sh run_tests
+
+after_script:
+  - ./travis-tool.sh dump_logs
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
+
     
-# See the travis docs for more information:
-#   http://about.travis-ci.org/docs/user/build-configuration/#The-Build-Matrix
-
-
-# Also works but is slower as it needs devtools:
-# - ./travis-tool.sh install_deps
-
-# Currently unused (and GSL used for illustration)
-#  - ./travis-tool.sh aptget_install libgsl0-dev
 
