--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,13 @@
 Package: Rcpp
 Title: Seamless R and C++ Integration
-Version: 0.10.6.8
-Date: 2014-01-19
-Authors@R: c(
-    person("Dirk", "Eddelbuettel", role = c("aut", "cre"), email = "edd@debian.org" ),
-    person("Romain", "Francois", role = "aut", email = "romain@r-enthusiasts.com"),
-    person("JJ", "Allaire", role = "ctb", email = "jj.allaire@gmail.com"),
-    person("John", "Chambers", role = "ctb", email = "jmc@r-project.org"),
-    person("Douglas", "Bates", role = "ctb", email = "bates@stat.wisc.edu"),
-    person("Kevin", "Ushey", role = "ctb", email = "kevinushey@gmail.com")
-    )
+Version: 0.10.6.9
+Date: 2014-01-25
+Authors@R: c(person("Dirk", "Eddelbuettel", role = c("aut", "cre"), email = "edd@debian.org" ),
+             person("Romain", "Francois", role = "aut", email = "romain@r-enthusiasts.com"),
+             person("JJ", "Allaire", role = "ctb", email = "jj.allaire@gmail.com"),
+             person("John", "Chambers", role = "ctb", email = "jmc@r-project.org"),
+             person("Douglas", "Bates", role = "ctb", email = "bates@stat.wisc.edu"),
+             person("Kevin", "Ushey", role = "ctb", email = "kevinushey@gmail.com"))
 Description: The Rcpp package provides R functions as well as a C++ library
  which facilitate the integration of R and C++.
  .
