improvements to Rcpp.package.skeleton()
* when available, pkgKitten is used to create a better newPkg-package.Rd file
* default license changed from 'What license is it under' (which does not
  pass R CMD check) to 'GPL (>= 2)' which does
* with this pkgKitten becomes a new Suggests:

and the net result is that we now pass 'R CMD check' for skeleton packages
without any notes, warnings or what have you comments

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
 
 install:
   - ./travis-tool.sh install_aptget r-cran-runit
-  - ./travis-tool.sh install_r inline rbenchmark highlight
+  - ./travis-tool.sh install_r inline rbenchmark highlight pkgKitten
 
 script: 
   - ./travis-tool.sh run_tests
