--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,11 @@ before_install:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
   - ./travis-tool.sh bootstrap
+  - sudo add-apt-repository -y ppa:edd/misc
+  - sudo apt-get update -q
 
 install:
-  - ./travis-tool.sh install_aptget r-cran-runit
-  - ./travis-tool.sh install_r inline rbenchmark highlight pkgKitten
+  - ./travis-tool.sh install_aptget r-cran-runit r-cran-inline r-cran-rbenchmark r-cran-highlight r-cran-pkgkitten
 
 script: 
   - ./travis-tool.sh run_tests
