added note to .travis.yml about need for hightlight 0.4.4.1
according to Romain a newer one works as well

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ before_install:
   - sudo apt-get update -q
 
 install:
+  ## note that we currently depend on highlight 0.4.4.1 from the PPA as 0.4.5 has issues
   - ./travis-tool.sh install_aptget r-cran-runit r-cran-inline r-cran-rbenchmark r-cran-highlight r-cran-pkgkitten
 
 script: 
