--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,12 +5,12 @@ Date: 2015-05-01
 Author: Dirk Eddelbuettel, Romain Francois, JJ Allaire, Kevin Ushey, 
  Douglas Bates, and John Chambers
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
-Description: The Rcpp package provides R functions as well as C++ classes which
+Description: The 'Rcpp' package provides R functions as well as C++ classes which
  offer a seamless integration of R and C++. Many R data types and objects can be
  mapped back and forth to C++ equivalents which facilitates both writing of new
  code as well as easier integration of third-party libraries. Documentation 
- about Rcpp is provided by several vignettes included in this package, via the 
- Rcpp Gallery site at http://gallery.rcpp.org, the paper by Eddelbuettel and 
+ about 'Rcpp' is provided by several vignettes included in this package, via the 
+ 'Rcpp Gallery' site at <http://gallery.rcpp.org>, the paper by Eddelbuettel and 
  Francois (2011, JSS), and the book by Eddelbuettel (2013, Springer); see 
  'citation("Rcpp")' for details on these last two.
 Depends: R (>= 3.0.0)
