--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: The 'Rcpp' package provides R functions as well as C++ classes whic
  Francois (2011, JSS), and the book by Eddelbuettel (2013, Springer); see 
  'citation("Rcpp")' for details on these last two.
 Depends: R (>= 3.0.0)
-Imports: methods
+Imports: methods, utils
 Suggests: RUnit, inline, rbenchmark, highlight, pkgKitten (>= 0.1.2)
 VignetteBuilder: highlight
 URL: http://www.rcpp.org, http://dirk.eddelbuettel.com/code/rcpp.html, https://github.com/RcppCore/Rcpp
