--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: Rcpp
 Title: Seamless R and C++ Integration
 Version: 0.11.6.4.3
-Date: 2015-07-23
+Date: 2015-07-24
 Author: Dirk Eddelbuettel, Romain Francois, JJ Allaire, Kevin Ushey, 
- Douglas Bates, and John Chambers
+ Qiang Kou, Douglas Bates and John Chambers
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: The 'Rcpp' package provides R functions as well as C++ classes which
  offer a seamless integration of R and C++. Many R data types and objects can be
