--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Description: The 'Rcpp' package provides R functions as well as C++ classes whic
  'citation("Rcpp")' for details on these last two.
 Depends: R (>= 3.0.0)
 Imports: methods, utils
-Suggests: RUnit, inline, rbenchmark, highlight, pkgKitten (>= 0.1.2)
+Suggests: RUnit, inline, rbenchmark, highlight, pkgKitten (>= 0.1.2), littler
 VignetteBuilder: highlight
 URL: http://www.rcpp.org, http://dirk.eddelbuettel.com/code/rcpp.html, https://github.com/RcppCore/Rcpp
 License: GPL (>= 2)
