changes in Rcpp modules to allow declaration of the copy constructor of a class with the `copy_constructor` declaration:
```
    #include <Rcpp.h>
    using namespace Rcpp ;

    class Foo{
      public:
        Foo( int x_ ) : x(x_){}
        int x ;
    } ;

    RCPP_MODULE(test){
      class_<Foo>("Foo")
        .constructor<int>()
        .copy_constructor()
        .field( "x", &Foo::x)
      ;
  }
```

This is associated with the `copy` R function :

```
f <- new( Foo, 1 )
g <- copy( f)
g$x
!identical( g$.pointer, f$.pointer )
```

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,10 +30,9 @@ export(Module,
        demangle,
        sizeof,
        cpp_object_initializer,
-       cpp_object_dummy, 
-       Rcpp.plugin.maker
+       cpp_object_dummy,
+       Rcpp.plugin.maker,
+       copy
        )
 S3method( print, bytes )
 exportClass(RcppClass)
-
-
