Added `destruct` and `is_destructed` to
  - explicitely destruct a C++ object (without waiting for the GC)
  - check if an object has been destructed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,7 +32,9 @@ export(Module,
        cpp_object_initializer,
        cpp_object_dummy,
        Rcpp.plugin.maker,
-       copy
+       copy,
+       destruct,
+       is_destructed
        )
 S3method( print, bytes )
 exportClass(RcppClass)
