reverting PR 454 for copyObject and underlying copy constructor

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,11 +30,10 @@ export(Module,
        demangle,
        sizeof,
        cpp_object_initializer,
-       cpp_object_dummy,
-       Rcpp.plugin.maker,
-       copyObject,
-       destruct,
-       is_destructed
+       cpp_object_dummy, 
+       Rcpp.plugin.maker
        )
 S3method( print, bytes )
 exportClass(RcppClass)
+
+
