Add test code coverage tracking

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,9 @@ install:
 script: 
   - ./run.sh run_tests
 
+after_success:
+  - R -e 'install.packages("covr")' -e 'covr::codecov()'
+
 after_failure:
   - ./run.sh dump_logs
 
