--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: Rcpp
 Title: Seamless R and C++ Integration
-Version: 0.12.7.5
-Date: 2016-10-25
-Author: Dirk Eddelbuettel, Romain Francois [2009-2013], JJ Allaire, Kevin Ushey,
- Qiang Kou, Douglas Bates [2010-2012] and John Chambers
+Version: 0.12.8
+Date: 2016-11-16
+Author: Dirk Eddelbuettel, Romain Francois, JJ Allaire, Kevin Ushey, Qiang Kou,
+ Nathan Russell, Douglas Bates and John Chambers
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: The 'Rcpp' package provides R functions as well as C++ classes which
  offer a seamless integration of R and C++. Many R data types and objects can be
