--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -14,3 +14,5 @@ doxyfile
 vignettes/getCurrentVersionsOfCitedPackages.R
 ^Contributing.md$
 ^\.codecov\.yml$
+inst/include/Rcpp.h.new
+inst/include/Rcpp.h.old
