--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,1 +1,7 @@
-comment: false
+comment:
+  layout: "header, diff, tree, changes"
+  behavior: default
+  require_changes: false  # if true: only post the comment if coverage changes
+  branches: null
+  flags: null
+  paths: null
